# fastapi-boilerplate

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.ipynb
alembic/: env.py
fastapi_boilerplate/: __init__.py
fastapi_boilerplate/apps/: __init__.py  route.py
fastapi_boilerplate/apps/api_v1/: __init__.py  route.py  routes.py
fastapi_boilerplate/apps/api_v1/role/: __init__.py  configuration.py  constant.py  model.py  repository.py  response_message.py  route.py  schema.py  service.py  view.py
fastapi_boilerplate/apps/api_v1/user/: __init__.py  configuration.py  constant.py  helper.py  model.py  repository.py  response_message.py  route.py  schema.py  service.py  view.py
fastapi_boilerplate/apps/auth/: __init__.py  configuration.py  constant.py  model.py  repository.py  response_message.py  route.py  schema.py  service.py  view.py
fastapi_boilerplate/apps/base/: __init__.py  configuration.py  constant.py  model.py  repository.py  schema.py  service.py  service_initializer.py  view.py
fastapi_boilerplate/apps/email/: constant.py  helper.py  model.py  repository.py  route.py  send_email.py  send_sms.py  service.py
fastapi_boilerplate/apps/otp/: __init__.py  constant.py  helper.py  model.py  route.py  send_sms.py  service.py
fastapi_boilerplate/core/: __init__.py  config.py  configuration.py  helper.py  load_models.py  middlewares.py  response_message.py  route.py  schema.py  security.py
fastapi_boilerplate/database/: __init__.py  connection.py  init_database.py  session.py
fastapi_boilerplate/middleware/: __init__.py  constant.py  exception_handling.py
migrations/: env.py
migrations/versions/: c6fda7e61add_first_migration.py
scripts/: radon_check.sh  run.sh  test.sh
static/: redoc.standalone.js  swagger-ui-bundle.js  swagger-ui.css
static/email/: email.html
tests/: __init__.py  test_role.py
