[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI BoilerPlate"
authors = [
    {name = "Zeeshan Asim",email = "zeeshanravian1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg[binary,pool] (>=3.2.5,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest-asyncio = "^0.25.3"
httpie = "^3.2.4"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
radon = "^6.0.1"
pyright = "^1.1.396"
mypy = "^1.15.0"
python-lsp-server = {extras = ["all"], version = "^1.12.2"}
black = "^25.1.0"
pyupgrade = "^3.19.1"
ruff = "^0.9.10"
bandit = "^1.8.3"
coverage = "^7.6.12"
logfire = "^3.7.1"
gitlint = "^0.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "class"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
line-length = 79

[tool.ruff.lint]
extend-select = [
    "D",        # pydocstyle
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "ARG001",   # unused arguments in functions
    "RUF",      # ruff dev's own rules
    "SIM",      # pyflakes simplicity
    "C90",      # more complexity rules
]
ignore = [
    "E501",     # line too long, handled by black
    "B008",     # do not perform function calls in argument defaults
    "W191",     # indentation contains tabs
    "B904",     # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
